Fixed Header Collapse in Mobile View

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 
 .container {
-  max-width: 1320px;
+  max-width: 1330px;
   margin: 0 auto;
 }
 
@@ -20,7 +20,7 @@
 
 .contact-us-item {
   margin-top: 5px;
-  padding: 0 5px;
+  padding-left: 5px;
   list-style: none;
   font-size: 12px;
   font-weight: bold;
@@ -34,6 +34,10 @@
   position: relative;
   top: 2px;
   left: 4px;
+}
+
+.social-nav {
+  padding-left: 0;
 }
 
 .social-nav ul  {
@@ -136,23 +140,25 @@ button:focus {
   background-color: rgba(26, 24, 25, .8);
 }
 
-
+.img-col {
+  padding: 0 10px;
+}
 
 .txt-col-1 {  
   margin-top: 10px;
-  padding: 0 10px;
+  padding: 0;
   font-family: 'Open Sans Condensed', sans-serif;
 }
 
 .txt-col-2 {  
   margin-top: 40px;
-  padding: 0 10px;
+  padding: 0;
   font-family: 'Open Sans Condensed', sans-serif;
 }
 
 .txt-col-h1 {
-  font-size: 74px;  
-  line-height: 1.1;
+  font-size: 20vw;  
+  line-height: 21vw;
   color:black;
 }
 
@@ -227,8 +233,8 @@ footer span {
   }
 
   .txt-col-h1 {
-    font-size: 50px;
-    line-height: 55px;
+    font-size: 9vw;
+    line-height: 10vw;
     color:black;
   }
   
@@ -264,6 +270,7 @@ footer span {
     font-weight: bold;
     margin: 0 ;
     padding-top: 2px;
+    padding-left: 0;
   }
 
   .contact-us-item li {
@@ -324,6 +331,7 @@ footer span {
   }
 
   .nav-link:hover {
+    color: #40b9ba;
     background-color: white;
     height: 50px;
   }
@@ -351,8 +359,8 @@ footer span {
   }
 
   .txt-col-h1 {
-    font-size: 55px;
-    line-height: 60px;
+    font-size: 7vw;
+    line-height: 8vw;
   }
 
   .txt-col-p {
@@ -440,6 +448,11 @@ footer span {
     line-height: 28px;
     background-color: rgba(26, 24, 25, .7);
   } 
+
+  .cont-row{
+    padding-left: 0;
+    padding-right: 0;
+  }
 
   .txt-col-h1 {
     font-size: 75px;
